--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,52 @@
 body {
   background-color: aqua;
+  font-family: sans-serif;
+}
+select {
+  display: block;
+  width: 100%;
+  padding: 5px;
+  border-radius: 5px;
+}
+small {
+  font-size: medium;
+}
+h1 {
+  text-align: center;
+
+  font-size: 30px;
+}
+.container {
+  background-color: antiquewhite;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
+  display: block;
+  margin: 0 auto;
+  max-width: 500px;
+  padding: 20px 20px;
+}
+.cities {
+  border-bottom: 1px dotted gray;
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0;
+  padding: 20px 0;
+}
+.city {
+  margin: 0 0 5px;
+  font-size: 28px;
+  font-weight: bold;
+}
+.time {
+  font-size: 40px;
+  font-weight: bold;
+}
+.date {
+  font-size: 15px;
+  opacity: 0.7;
+}
+
+footer {
+  text-align: center;
+  margin: 20px;
 }
